<resources>
    <string name="app_name">Songbliss</string>
    <string name="all_songs">All Songs</string>
    <string name="arrows"><![CDATA[>>]]></string>
    <string name="artist">Artists</string>
    <string name="genres">Genres</string>
    <string name="now_playing">Now Playing</string>
    <string name="playlist">Playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="songbliss">songbliss</string>
    <string name="type">Type to search…</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
</resources>
